Adopt deterministic CBOR for extensible Janex metadata
Assisted-by: codex:gpt-5.6-sol